[gd_scene load_steps=4 format=3 uid="uid://cvhhll683san2"]

[ext_resource type="Script" uid="uid://drqgh0vj6ano7" path="res://scenes/items/iteminteract.gd" id="1_skfde"]
[ext_resource type="Texture2D" uid="uid://c72wlne1fh1ho" path="res://assets/tiles/tileobjects.png" id="2_jliqt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p13sk"]
size = Vector2(80, 62)

[node name="iteminteract" type="Area2D"]
script = ExtResource("1_skfde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_p13sk")

[node name="behind" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.439216)
rotation = 0.349066
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_jliqt")
region_enabled = true
region_rect = Rect2(18, 44, 13, 10)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jliqt")
region_enabled = true
region_rect = Rect2(18, 44, 13, 10)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
